# super-duper-invention

./: .cproject  .gitignore  .project  CMakeLists.txt
.externalToolBuilders/: _cmake ...launch  app_run.launch  cmake --build.launch
assets/: shader.glsl
include/: windowEvents.h
include/client/: threadsData.h  window.h
include/client/gl/: ShaderProgram.h  opengl.h
include/client/logic/: run.h
include/common/: log.h  world.h
include/common/math/: camera.h  mat4.h  vec3.h
include/glad/: glad.h
src/: windowEvents.cpp
src/client/: glad.c  main.cpp  threadsData.cpp  window.cpp  windowEvents.cpp
src/client/gl/: ShaderProgram.cpp
src/client/logic/: run.cpp
src/common/: log.cpp  world.cpp
src/common/math/: camera.cpp  mat4.cpp  vec3.cpp
